--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,16 @@ plotly==5.20.0
 dash==2.16.1
 numpy==1.26.4
 git+https://github.com/openai/CLIP.git
-dash-bootstrap-components
-pandas
-dash-ag-grid
-wordcloud
-dash-image-gallery
-dash-core-components
-umap-learn
-scikit-learn
-wget
-dash-holoniq-wordcloud
-cleanlab-studio
-python-dotenv
+dash-bootstrap-components==1.6.0
+pandas==2.2.2
+dash-ag-grid==31.2.0
+wordcloud==1.9.3
+dash-image-gallery==0.0.1
+dash-core-components==2.0.0
+umap-learn==0.5.6
+scikit-learn==1.5.0
+wget==3.2
+dash-holoniq-wordcloud==0.0.4
+cleanlab-studio==2.0.8
+python-dotenv==1.0.1
+openai
